--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <title>Object Basics</title>
 </head>
 <body>
-    <div>
+    <button class="increment">increment</button>
+
+    <!-- !bank account -->
+    <!-- <div>
         <label for="name">name</label>
         <input type="text" name="name" id="name">
         <label for="amount">amount</label>
         <input type="text" name="amount" id="amount">
         <button class="deposit-btn">deposit</button>
         <h2 class="result"></h2>
-    </div>
+    </div> -->
+    <!-- !END bank account -->
+    <!-- !buy and sell -->
     <!-- <div class="my-store">
         <button class="buy" data-id="buy">buy</button>
         <button class="buy30" data-id="buy30">buy30</button>
@@ -29,7 +34,7 @@
         
         <h1 class="left-over"></h1>
     </div> -->
-    
+    <!-- !END buy and sell -->
     <!-- JS -->
     <script src="js/script.js"></script>
 </body>
